modified:   password_wallet/__init__.py 	modified:   password_wallet/config.py 	modified:   password_wallet/db/__init__.py 	new file:   password_wallet/encryptions/__init__.py 	new file:   password_wallet/encryptions/caesar.py 	modified:   password_wallet/templates/base.html 	modified:   pyproject.toml

--- a/password_wallet/templates/base.html
+++ b/password_wallet/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>{% block main %}{% endblock main %}</main>
     <footer>
         <p>Stonę wykonał: Seweryn Świech 5ti2</p>
     </footer>
