modified:   password_wallet/__init__.py 	new file:   password_wallet/blueprints/auth.py 	new file:   password_wallet/blueprints/home.py 	modified:   password_wallet/config.py 	modified:   password_wallet/db/__init__.py 	modified:   password_wallet/db/_models.py 	modified:   password_wallet/encryptions/__init__.py 	new file:   password_wallet/static/logo.jpg 	new file:   password_wallet/static/logo.png 	new file:   password_wallet/static/script.js 	modified:   password_wallet/static/style.css 	modified:   password_wallet/templates/base.html 	new file:   password_wallet/templates/credentials.html 	new file:   password_wallet/templates/home.html

--- a/password_wallet/templates/base.html
+++ b/password_wallet/templates/base.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='logo.png') }}" type="image/x-icon">
+    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
     <title>Password wallet</title>
 </head>
 <body>
-    <header></header>
-    <main>{% block main %}{% endblock main %}</main>
+    <header>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="logo" id="logo">
+        <h1>
+            Password Wallet
+        </h1>
+        {% if g.user %}
+            <p>Witaj {{ g.user.login }} !!<p>
+            <a href="{{ url_for('auth.signout') }}">Wyloguj się</a>
+        {% endif %}
+    </header>
+    <main>
+        {% block main %}
+
+        {% endblock main %}
+    </main>
     <footer>
         <p>Stonę wykonał: Seweryn Świech 5ti2</p>
     </footer>
