Pierwsza działająca wersja

--- a/password_wallet/templates/base.html
+++ b/password_wallet/templates/base.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <!-- Dodatkowe linki -->
+    {% block links %}
+        
+    {% endblock %}
+    <!-- Podstawowe linki / Ładowane zawsze -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_base.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='logo.png') }}" type="image/x-icon">
     <script defer src="{{ url_for('static', filename='script.js') }}"></script>
     <title>Password wallet</title>
@@ -15,15 +20,17 @@
             Password Wallet
         </h1>
         {% if g.user %}
-            <p>Witaj {{ g.user.login }} !!<p>
-            <a href="{{ url_for('auth.signout') }}">Wyloguj się</a>
+            <div id="user">
+                <p>Witaj {{ g.user.login }} !!</p>
+                <a href="{{ url_for('auth.signout') }}">Wyloguj się</a>
+            </div>
         {% endif %}
     </header>
+    {% block main %}
     <main>
-        {% block main %}
 
-        {% endblock main %}
     </main>
+    {% endblock main %}
     <footer>
         <p>Stonę wykonał: Seweryn Świech 5ti2</p>
     </footer>
