--- a/password_wallet/static/style_base.css
+++ b/password_wallet/static/style_base.css
@@ -50,19 +50,19 @@ header, footer, main {
 
 header {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: start;
     align-items: center;
 
     gap: 0 2rem;
 
     padding: 1rem 2rem;
-    
+
     #logo {
         flex: 0 1 auto;
-        
+
         min-width: auto;
-        
+
         width: 100%;
         height: auto;
 
@@ -71,24 +71,68 @@ header {
 
         border-radius: 0.5rem;
     }
+
+    h1 {
+        flex: 0 1 auto;
+        margin: 0;
+        font-size: 2rem;
+    }
+
+    #user {
+        flex: 0 1 auto;
+        text-align: right;
+
+        margin-left: auto;
+
+        p {
+            display: inline-block;
+            margin: 0;
+            font-size: 1.2rem;
+        }
+
+        a {
+            display: inline-block;
+            padding: 1rem;
+
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+
+            border: 1px solid transparent;
+            transition: all 0.2s ease-in-out;
+            border-radius: 1rem;
+        }
+
+        a:hover {
+            color: var(--color-blue);
+
+            border: 1px solid var(--color-blue);
+            box-shadow: 2px 2px 0.5rem var(--color-blue);
+        }
+    }
 }
 
 main {
     flex: 1;
     width: 100%;
     max-width: 900px;
-    padding: 2rem;    
+    padding: 2rem;
 
     border-radius: 1rem;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 @media (max-width: 900px) {
     body {
         gap: 2.5rem 0;
     }
-    
+
     main {
         padding: 1rem;
         border-radius: 0;
-    }    
+    }
 }
