--- a/password_wallet/templates/credentials.html
+++ b/password_wallet/templates/credentials.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
+{% block links %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='style_extra.css') }}">
+{% endblock %}
 {% block main %}
-    <section>
-        <button id="signin_button">Zaloguj się</button>
-        <button id="signup_button">Zarejestrój się</button>
+<main>
+    <section id="buttons-section">      
+        <button id="signin_button" onclick="section_change_to('signin-section', 'section-namespace-1');">Zaloguj się</button>
+        <button id="signup_button" onclick="section_change_to('signup-section', 'section-namespace-1');">Zarejestrój się</button>
     </section>
-    <section id="signin-section">
+    <section id="signin-section" class="active section-namespace-1">
         <h2>Logowanie</h2>
         <form action='{{ url_for("auth.signin") }}' method="post" id="login-form">
             <input type="text" name="user_login" placeholder="Nazwa Użytkownika: " required>
@@ -12,11 +16,8 @@
 
             <button type="submit">Zaloguj się</button>
         </form>
-        {% if error_signin %}
-            <p class="error">{{ error_signin }}</p>
-        {% endif %}
     </section>
-    <section id="signup-section">
+    <section id="signup-section" class="disabled section-namespace-1">
         <h2>Rejestracja</h2>
         <form action='{{ url_for("auth.signup") }}' method="post">
             <input type="text" name="user_login" placeholder="Nazwa Użytkownika: " required>
@@ -25,8 +26,16 @@
 
             <button type="submit">Zarejestrój się</button>
         </form>
-        {% if error_signup %}
-            <p class="error">{{ error_signup }}</p>
-        {% endif %}
     </section>
+    
+    {% with messages = get_flashed_messages(category_filter=["info"]) %}
+        {% if messages%}
+            <section id="info-section">
+                {% for message in messages %}
+                    <p class="info-p">{{ message }}</p>
+                {% endfor%}
+            </section>
+        {% endif %}
+    {% endwith %}
+</main>
 {% endblock main %}
