--- a/password_wallet/templates/home.html
+++ b/password_wallet/templates/home.html
@@ -2,15 +2,15 @@
 {% block links %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style_extra.css') }}">
 {% endblock %}
-{% block main %}
+{% block main -%}
 <main>
     <section id="buttons-section">      
-        <button id="" onclick="section_change_to('stored-passwords-section', 'section-namespace-1');">Zapisane hasła</button>
-        <button id="" onclick="section_change_to('save-password-section', 'section-namespace-1');">Zapisz hasło</button>
+        <button id="stored_password_button" onclick="section_change_to('stored-passwords-section', 'section-namespace-1');">Zapisane hasła</button>
+        <button id="save_password_button" onclick="section_change_to('save-password-section', 'section-namespace-1');">Zapisz hasło</button>
     </section>
     <section id="stored-passwords-section" class="active section-namespace-1">
         <h2>Zapisane Hasła</h2>
-        {% if stored_passwords %}
+        {%- if stored_passwords %}
         <table>
             <tr>
                 <th>Hasło</th>
@@ -19,35 +19,35 @@
                 <th>Klucz</th>
                 <th>Opcje</th>
             </tr>
-            {% for password, encrypted_password in stored_passwords %}
-                <tr>
-                    <td>{{ password }}</td>
-                    <td>{{ encrypted_password.password }}</td>
-                    <td>{{ encrypted_password.encryption_method_name }}</td>
-                    <td>{{ encrypted_password.encryption_method_key }}</td>
-                    <td>
-                        <form action="{{ url_for("home.dump_password") }}" method="post">
-                            <input name="encrypted_password_id" type="hidden" value="{{ encrypted_password.id }}">
-                            <button type="submit">Usuń</button>
-                        </form>
-                    </td>
-                </tr>
-            {% endfor %}
+            {%- for password, encrypted_password in stored_passwords %}
+            <tr>
+                <td>{{ password }}</td>
+                <td>{{ encrypted_password.password }}</td>
+                <td>{{ encrypted_password.encryption_method_name }}</td>
+                <td>{{ encrypted_password.encryption_method_key }}</td>
+                <td>
+                    <form action="{{ url_for("home.dump_password") }}" method="post">
+                        <input name="encrypted_password_id" type="hidden" value="{{ encrypted_password.id }}">
+                        <button type="submit">Usuń</button>
+                    </form>
+                </td>
+            </tr>
+            {%-  endfor %}
         </table>
-        {% else %}
+        {%- else %}
             <p>Brak zapisanych haseł</p>
         {% endif %}
     </section>
     <section id="save-password-section" class="disabled section-namespace-1">
         <h2>Dodaj hasło</h2>
         <form action="{{ url_for('home.store_password') }}" method="post">
-            <input type="text" name="password">
+            <input type="text" name="password" placeholder="Hasło do zapisania" pattern="[A-z1-9]+">
             <select name="encryption_method">
-                {%+ for encryption_name in avaible_encryptions %}
+                {% for encryption_name in avaible_encryptions -%}
                     <option value="{{ encryption_name }}">{{ encryption_name }}</option>
-                {% endfor %}
+                {%- endfor %}
             </select>
-            <input type="text" name="encryption_key">
+            <input type="text" name="encryption_key" placeholder="Klucz szyfrowania" pattern="[A-z1-9]+">
             <button type="submit">Zapisz</button>
         </form>
     </section>
@@ -58,17 +58,7 @@
                     <p class="info-p">{{ message }}</p>
                 {% endfor %}
             </section>
-        {% endif %}
-    {% endwith %}
-
-    {% with messages = get_flashed_messages(category_filter=['error']) %}
-        {% if messages%}
-            <section id="error-section">
-                {% for message in messages %}
-                    <p class="error-p">{{ message }}</p>
-                {% endfor %}
-            </section>
-        {% endif %}
+        {% endif -%}
     {% endwith %}
 </main>
 {% endblock %}
