modified:   password_wallet/db/__init__.py 	renamed:    password_wallet/db/_models.py -> password_wallet/db/_models_.py 	modified:   password_wallet/encryptions/__init__.py 	modified:   password_wallet/encryptions/intarface.py 	modified:   password_wallet/encryptions/src/caesar.py 	modified:   password_wallet/encryptions/src/rc4.py 	modified:   password_wallet/encryptions/src/salsa20.py 	modified:   password_wallet/encryptions/utils.py 	modified:   password_wallet/templates/home.html

--- a/password_wallet/templates/home.html
+++ b/password_wallet/templates/home.html
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <th>Hasło</th>
-                <th>Hasło zaszyfrowane</th>
+                <th>Hasło zaszyfrowane (base64)</th>
                 <th>Metoda szyfrowania</th>
                 <th>Klucz</th>
                 <th>Opcje</th>
