modified:   password_wallet/__init__.py 	modified:   password_wallet/__main__.py 	modified:   password_wallet/blueprints/auth.py 	new file:   password_wallet/blueprints/encryption.py 	modified:   password_wallet/blueprints/home.py 	modified:   password_wallet/config.py 	modified:   password_wallet/encryptions/__init__.py 	modified:   password_wallet/encryptions/intarface.py 	modified:   password_wallet/encryptions/src/caesar.py 	modified:   password_wallet/encryptions/src/des.py 	modified:   password_wallet/encryptions/src/rc4.py 	modified:   password_wallet/encryptions/src/salsa20.py 	modified:   password_wallet/encryptions/utils.py 	new file:   password_wallet/static/css/style_base.css 	new file:   password_wallet/static/css/style_extra.css 	renamed:    password_wallet/static/logo.jpg -> password_wallet/static/img/logo.jpg 	new file:   password_wallet/static/img/logo.png 	new file:   password_wallet/static/js/auth.js 	new file:   password_wallet/static/js/home.js 	new file:   password_wallet/static/js/script.js 	deleted:    password_wallet/static/logo.png 	deleted:    password_wallet/static/script.js 	deleted:    password_wallet/static/style_base.css 	deleted:    password_wallet/static/style_extra.css 	modified:   password_wallet/templates/base.html 	modified:   password_wallet/templates/credentials.html 	modified:   password_wallet/templates/home.html 	modified:   pyproject.toml

--- a/password_wallet/templates/base.html
+++ b/password_wallet/templates/base.html
@@ -6,24 +6,29 @@
     {#- Dodatkowe linki -#}
     {% block links -%}{% endblock -%}
     {#- Podstawowe linki / Ładowane zawsze #}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style_base.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='logo.png') }}" type="image/x-icon">
-    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static_css', filename='style_base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static_css', filename='style_extra.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static_img', filename='logo.png') }}" type="image/x-icon">
+    <script defer src="{{ url_for('static_js', filename='script.js') }}"></script>
     <title>Password wallet</title>
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="logo" id="logo">
+        <img src="{{ url_for('static_img', filename='logo.png') }}" alt="logo" id="logo">
         <h1>
             Password Wallet
         </h1>
-        {% if g.user -%}
-        <div id="user">
-            <p>Witaj {{ g.user.login }} !!</p>
-            <a href="{{ url_for('auth.signout') }}">Wyloguj</a>
-        </div>
-        {%- endif %}
     </header>
+    <nav>
+        <h2>Nawigacja</h2>
+        {% block nav%}
+            
+        {% endblock nav%}
+        {% if g.user %}
+            <h2>Witaj {{ g.user.login }}</h2>
+            <a href="{{ url_for('auth.signout') }}">Wyloguj</a>
+        {% endif %}
+    </nav>
     {% block main %}
     <main>
 
@@ -39,7 +44,7 @@
         {% endif %}
     {%- endwith %}
     <footer>
-        <p>Stonę wykonał: Seweryn Świech 5ti2</p>
+        <p>Stronę wykonał: Seweryn Świech 5ti2</p>
     </footer>
 </body>
 </html>
