--- a/password_wallet/templates/credentials.html
+++ b/password_wallet/templates/credentials.html
@@ -1,41 +1,39 @@
 {% extends 'base.html' %}
-{% block links %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style_extra.css') }}">
-{% endblock %}
+{% block links%}
+    <script defer src="{{ url_for('static_js', filename='auth.js') }}"></script>
+{% endblock links %}
+{% block nav %}
+    <button id="signin-button">Zaloguj się</button>
+    <button id="signup-button">Zarejestruj się</button>
+{% endblock nav %}
 {% block main %}
 <main>
-    <section id="buttons-section">      
-        <button id="signin_button" onclick="section_change_to('signin-section', 'section-namespace-1');">Zaloguj się</button>
-        <button id="signup_button" onclick="section_change_to('signup-section', 'section-namespace-1');">Zarejestrój się</button>
-    </section>
-    <section id="signin-section" class="active section-namespace-1">
-        <h2>Logowanie</h2>
+    <section id="signin-section" class="active">
+        <h1>Logowanie</h1>
         <form action='{{ url_for("auth.signin") }}' method="post" id="login-form">
-            <input type="text" name="user_login" placeholder="Nazwa Użytkownika: " required>
-            <input type="password" name="user_password" placeholder="Hasło: " required>
+            <label for="login-input">Login</label>
+            <input id="login-input" type="text" name="user_login" placeholder="Twój login: " required>
+            <label for="password-input">Hasło</label>
+            <input id="password-input" type="password" name="user_password" placeholder="Twoje hasło: " required>
 
             <button type="submit">Zaloguj się</button>
         </form>
+        <section class="messages-section"></section>
     </section>
-    <section id="signup-section" class="disabled section-namespace-1">
-        <h2>Rejestracja</h2>
+    <section id="signup-section" class="disabled">
+        <h1>Rejestracja</h1>
         <form action='{{ url_for("auth.signup") }}' method="post">
-            <input type="text" name="user_login" placeholder="Nazwa Użytkownika: " required>
-            <input type="password" name="user_password" placeholder="Hasło: " required>
-            <input type="password" name="user_password_repeat" placeholder="Powtórz Hasło: " required>
+            <label for="new-login-input">Login</label>
+            <input id="new-login-input" type="text" name="user_login" placeholder="Twój login: " required>
+            <label for="new-password-input">Hasło</label>
+            <input id="new-password-input" type="password" name="user_password" placeholder="Hasło: " required>
+            <label for="new-password-repet-input">Powtórz hasło</label>
+            <input id="new-password-repet-input" type="password" name="user_password_repeat" placeholder="Powtórz Hasło: " required>
 
-            <button type="submit">Zarejestrój się</button>
+            <button type="submit">Zarejestruj się</button>
         </form>
+        <section class="messages-section"></section>
     </section>
     
-    {% with messages = get_flashed_messages(category_filter=["info"]) %}
-        {% if messages%}
-            <section id="info-section">
-                {% for message in messages %}
-                    <p class="info-p">{{ message }}</p>
-                {% endfor%}
-            </section>
-        {% endif %}
-    {% endwith %}
 </main>
 {% endblock main %}
